# gitcode-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  ROADMAP.zh-CN.md  gc-vs-gh-diff-report.md  pyproject.toml
.features/gitcode-cli/: workflow-state.json
.features/gitcode-cli/handoff/: 00-requirements.md  10-prd.md
.features/gitcode-cli/logs/: stage-journal.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish-dev.yml  publish.yml
.trae/skills/gitcode-api-handler/: SKILL.md
.trae/skills/gitcode-api-handler/references/: Branch.md  Commit.md  INDEX.md  Issues.md  Labels.md  PullRequests.md  Release.md  Repositories.md  Search.md  Tag.md
.trae/skills/gitcode-api-handler/references/Branch/: create-branch.md  create-protect-rule.md  delete-branch.md  delete-protect-rule.md  get-branch.md  get-branches.md  get-protect-rules.md  update-protect-rule.md
.trae/skills/gitcode-api-handler/references/Commit/: compare-commits.md  create-commit-comment.md  delete-commit-comment.md  get-commit-comment.md  get-commit-comments.md  get-commit-diff.md  get-commit-patch.md  get-commit-statistics.md  get-commit.md  get-repo-comments.md  get-repo-commits.md  update-commit-comment.md
.trae/skills/gitcode-api-handler/references/Issues/: create-issue-comment.md  create-issue-labels.md  create-issue.md  delete-issue-comment.md  delete-issue-label.md  get-comment-modify-history.md  get-comment-reactions.md  get-enterprise-issue-comments.md  get-enterprise-issue-labels.md  get-enterprise-issue-statuses.md  get-enterprise-issue.md  get-enterprise-issues.md  get-issue-comment.md  get-issue-comments.md  get-issue-operate-logs.md  (+12 more)
.trae/specs/fix-keyerror-number-in-response/: checklist.md  spec.md  tasks.md
.trae/specs/fix-pr-create-keyerror-html-url/: checklist.md  spec.md  tasks.md
.trae/specs/fix-windows-unicode-encode/: checklist.md  spec.md  tasks.md
docs/: development.md  index.md
docs/superpowers/plans/: 2026-04-24-gc-gh-alignment-plan.md  2026-04-24-gc-gh-alignment.md
docs/superpowers/specs/: 2026-04-24-gc-gh-alignment-design.md
src/gc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gitcode_cli/: __init__.py  cli.py  cli_compat.py  client.py  config.py  context.py  errors.py  formatters.py  helptext.py  repo.py  utils.py
src/gitcode_cli/adapters/: __init__.py  base.py  capabilities.py  issues.py  pulls.py
src/gitcode_cli/commands/: auth.py  issue.py  pr.py
src/gitcode_cli/services/: __init__.py  issues.py  pulls.py  users.py
src/pygitcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  conftest.py
tests/contracts/: test_gitcode_api_contracts.py
tests/fixtures/gh-cli-compat/: command_baseline.json  coverage.json
tests/unit/: test_cli.py  test_cli_compat.py  test_client.py  test_config.py  test_context.py  test_errors.py  test_formatters.py  test_repo.py  test_utils.py
tests/unit/adapters/: test_issue_adapter.py  test_pulls_adapter.py
tests/unit/commands/: test_auth.py  test_cli_gh_compat.py  test_issue.py  test_issue_adapter_boundary.py  test_pr.py  test_pr_adapter_boundary.py
tests/unit/services/: test_issues.py  test_pulls.py
(+122 files in other folders)
