[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygitcode"
version = "0.1.0"
description = "A CLI tool for GitCode (api.gitcode.com), modeled after GitHub CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "codeasier", email = "825770651@qq.com" },
]
keywords = ["gitcode", "cli", "git", "api", "vcs", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.6",
    "black>=24.0",
    "basedpyright>=1.19",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pygitcode"
Documentation = "https://github.com/yourusername/pygitcode#readme"
Repository = "https://github.com/yourusername/pygitcode.git"
Issues = "https://github.com/yourusername/pygitcode/issues"

[project.scripts]
gc = "gitcode_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=gitcode_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

# --- ruff ---
[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PL",  # Pylint
]
ignore = [
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition (common for Click commands and API methods)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PLC0415", "SIM117"]
"tests/conftest.py" = ["ARG", "PLC0415", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- black ---
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = "\\.pyi?$"

# --- basedpyright ---
[tool.basedpyright]
pythonVersion = "3.9"
include = ["src"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalIterable = false
reportOptionalOperand = false
reportMissingImports = false
